[project]
name = "models"
version = "0.1.0"
description = "Trading ML API and Bloomberg-style terminal"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [".git", ".venv", "venv", "__pycache__", "build", "dist", "node_modules"]

[tool.ruff.lint]
select = ["E", "F", "W"]
# Ignore style-only rules that would require large refactors; fix incrementally with ruff --fix
ignore = [
    "F401",   # unused imports
    "E402",   # module level import not at top (intentional for optional deps)
    "F841",   # unused variable
    "F403",   # star import (core/__init__.py)
    "F811",   # redefinition of unused name
    "E722",   # bare except (legacy code)
    "E501",   # line too long (fix with ruff format later)
    "W293",   # blank line contains whitespace (fix with ruff format later)
]

